--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ get_filename_component(PROJECT MDUGens NAME_WE)
 message(STATUS "Project name is ${PROJECT}")
 project (${PROJECT})
 
-include_directories(${CMAKE_SOURCE_DIR}/TPTFilter/include/)
+include_directories(${CMAKE_SOURCE_DIR}/TPTFilter/include)
 include_directories(${SC_PATH}/include/plugin_interface)
 include_directories(${SC_PATH}/include/common)
 include_directories(${SC_PATH}/common)
